--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.satyan:sugar:1.4'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile files('libs/jtwitter-yamba.jar')
 }
