--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,19 +7,18 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- Include following permission if you load images from Internet -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- Include following permission if you want to cache images on SD card -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".TwitterCopyCatApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name="com.example.android.twittercopycat.TwitterCopyCatApplication">
-
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreen"
             android:theme="@android:style/Theme.NoTitleBar">
@@ -38,14 +37,33 @@
         <activity
             android:name=".DetailScreen"
             android:label="@string/title_activity_detail" />
-        <activity android:name=".PublicTimelineScreen"
+        <activity
+            android:name=".PublicTimelineScreen"
             android:label="@string/title_activity_timeline" />
 
-        <!--Sugar Related Attributes-->
-        <meta-data android:name="DATABASE" android:value="twitter_copy_cat.db" />
-        <meta-data android:name="VERSION" android:value="5" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.example" />
+        <!-- Sugar Related Attributes -->
+        <meta-data
+            android:name="DATABASE"
+            android:value="twitter_copy_cat.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="5" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="com.example" />
+
+        <receiver
+            android:name=".NetworkChangeBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
