--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- Include following permission if you want to cache images on SD card -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
@@ -83,7 +82,6 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".receivers.MyAlarmReceiver"
             android:enabled="true"
@@ -98,10 +96,19 @@
         <service
             android:name=".services.MySendOfflineService"
             android:exported="false" />
-
         <service
             android:name=".services.NewTweetService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <receiver android:name=".TCCWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/tccwidget_info" />
+        </receiver>
     </application>
 
 </manifest>
