--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,7 +100,7 @@
             android:name=".services.NewTweetService"
             android:exported="false" />
 
-        <receiver android:name=".TCCWidget">
+        <receiver android:name=".TCCWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -109,6 +109,11 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/tccwidget_info" />
         </receiver>
+
+        <service
+            android:name=".services.WidgetService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
