--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,20 +100,22 @@
             android:name=".services.NewTweetService"
             android:exported="false" />
 
-        <receiver android:name=".TCCWidgetProvider">
+        <receiver android:name=".TCCWidgetProvider"
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/tccwidget_info" />
+                android:resource="@xml/tcc_widget_info" />
         </receiver>
 
         <service
             android:name=".services.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true"/>
     </application>
 
 </manifest>
