--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,7 +100,7 @@
             android:name=".services.NewTweetService"
             android:exported="false" />
 
-        <receiver android:name=".TCCWidgetProvider"
+        <receiver android:name=".widget.TCCWidgetProvider"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
